@@ -4,6 +4,7 @@
 	it to the Info document, sort it, and tweak a wording.
 	* src/color.c (color_update): Look for a default syntax only when
 	all else failed -- forego the small, complicating optimization.
+	* src/color.c (color_update): Strip things bare to see the sameness.
 
 GNU nano 2.5.3 - 2016.02.25
 
